# vkEngine

./: .clang-format  CMakeLists.txt  README.md  main.cpp
engine/: camera.cpp  camera.h  commandPool.cpp  commandPool.h  core.cpp  core.h  environment.cpp  environment.h  mainRenderPass.cpp  mainRenderPass.h  modelFactory.cpp  modelFactory.h  scene.cpp  scene.h
engine/common/: uniform.h
engine/data/: matrix.h  model.cpp  model.h
engine/states/: idle.cpp  idle.h  shift.cpp  shift.h  state.h  turn.cpp  turn.h
shaders/: CMakeLists.txt  shader.frag  shader.vert
tools/: CMakeLists.txt  configuration.cpp  configuration.h  exception.h  exceptions.h  logger.cpp  logger.h
tools/glfw/: CMakeLists.txt  event.cpp  event.h  handler.cpp  handler.h  interceptor.cpp  interceptor.h
tools/toml++/: toml.hpp
tools/vk/: CMakeLists.txt  bufferObject.cpp  bufferObject.h  commandPool.cpp  commandPool.h  commandsPool.cpp  commandsPool.h  core.cpp  core.h  discriptorsPool.cpp  discriptorsPool.h  frameBuffer.cpp  frameBuffer.h  instance.cpp  instance.h  logicalDevice.cpp  logicalDevice.h  physicalDevice.cpp  physicalDevice.h  pipeLine.cpp  pipeLine.h  queue.cpp  queue.h  renderPass.cpp  renderPass.h  surface.cpp  surface.h  swapChain.cpp  swapChain.h  uniformBufferSet.cpp  uniformBufferSet.h  validationLayers.cpp  validationLayers.h
tools/vk/common/: vertex.h
tools/vk/pipeLine/: assemblyState.cpp  assemblyState.h  blending.cpp  blending.h  descriptorSetLayout.cpp  descriptorSetLayout.h  multisampling.cpp  multisampling.h  pipeLineLayout.cpp  pipeLineLayout.h  rasterizationState.cpp  rasterizationState.h  shaderModule.cpp  shaderModule.h  vertexInputInfo.cpp  vertexInputInfo.h  viewportstate.cpp  viewportstate.h
tools/vk/renderPass/: attachment.h  dependency.h  subpass.h
tools/vk/synchronization/: fence.cpp  fence.h  semaphore.cpp  semaphore.h
tools/vk/units/: descriptorSet.cpp  descriptorSet.h
