set(vulkan_tools_src
        ${project_dir}/tools/vk/core.cpp
        ${project_dir}/tools/vk/instance.cpp
        ${project_dir}/tools/vk/logicalDevice.cpp
        ${project_dir}/tools/vk/physicalDevice.cpp
        ${project_dir}/tools/vk/surface.cpp
        ${project_dir}/tools/vk/discriptorsPool.cpp
        ${project_dir}/tools/vk/commandsPool.cpp
        ${project_dir}/tools/vk/frameBuffer.cpp
        ${project_dir}/tools/vk/bufferObject.cpp
        ${project_dir}/tools/vk/swapChain.cpp
        ${project_dir}/tools/vk/queue.cpp
        ${project_dir}/tools/vk/validationLayers.cpp
        ${project_dir}/tools/vk/pipeLine.cpp
        ${project_dir}/tools/vk/uniformBufferSet.cpp
        ${project_dir}/tools/vk/pipeLine/shaderModule.cpp
        ${project_dir}/tools/vk/pipeLine/blending.cpp
        ${project_dir}/tools/vk/pipeLine/multisampling.cpp
        ${project_dir}/tools/vk/pipeLine/assemblyState.cpp
        ${project_dir}/tools/vk/pipeLine/pipeLineLayout.cpp
        ${project_dir}/tools/vk/pipeLine/descriptorSetLayout.cpp
        ${project_dir}/tools/vk/pipeLine/viewportstate.cpp
        ${project_dir}/tools/vk/pipeLine/rasterizationState.cpp
        ${project_dir}/tools/vk/pipeLine/vertexinputinfo.cpp
        ${project_dir}/tools/vk/renderPass.cpp
        ${project_dir}/tools/vk/synchronization/semaphore.cpp
        ${project_dir}/tools/vk/synchronization/fence.cpp
        )

add_library(vulkan_tools
        OBJECT
        ${vulkan_tools_src})